fix dockerfile add sessionId, env variables option update readme

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,3 +9,5 @@
 @import url(./spinner.css);
 @import url(./tab.css);
 @import url(./tooltip.css);
+@import url(./text.css);
+@import url(./button.css);
