--- a/public/css/general.css
+++ b/public/css/general.css
@@ -1,24 +1,26 @@
-html, body{
-	font-family: 'Montserrat', sans-serif;
-	margin: auto;
+html,
+body {
+    font-family: 'Montserrat', sans-serif;
+    margin: auto;
     box-sizing: border-box;
-	transition: .3s all ease-in-out;
-	background-color: #25272c;
+    transition: 0.3s all ease-in-out;
+    background-color: #25272c;
 }
 
-.container{
-	max-width: 600px;
-	width: 100%;
-	display: flex;
-	margin: auto;
+.container {
+    max-width: 600px;
+    width: 100%;
+    display: flex;
+    margin: auto;
 }
 .row {
     width: 100%;
     display: flex;
 }
-button.disabled, button:disabled {
-    opacity: .65;
+button.disabled,
+button:disabled {
+    opacity: 0.65;
 }
-.title-h2-white{
-	color: #fff;
+.title-h2-white {
+    color: #fff;
 }
