--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,3 +11,5 @@
 @import url(./tooltip.css);
 @import url(./text.css);
 @import url(./button.css);
+@import url(./notification.css);
+@import url(./progress.css);
